--- a/jugend-dating-app/index.html
+++ b/jugend-dating-app/index.html
@@ -198,13 +198,25 @@
     <!-- Notification Toast -->
     <div id="toast" class="toast"></div>
 
-    <!-- Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<!-- Scripts - WICHTIG: Reihenfolge beachten! -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.0/dist/umd/supabase.min.js"></script>
     <script src="/js/config.js"></script>
-    <script src="/js/auth.js"></script>
-    <script src="/js/chat.js"></script>
     <script src="/js/moderation.js"></script>
     <script src="/js/webrtc.js"></script>
+    <script src="/js/chat.js"></script>
+    <script src="/js/auth.js"></script>
     <script src="/js/app.js"></script>
+    
+    <!-- Loading-Screen verstecken nach Init -->
+    <script>
+      window.addEventListener('load', () => {
+        setTimeout(() => {
+          const loadingScreen = document.getElementById('loading-screen');
+          if (loadingScreen && !authManager?.currentUser) {
+            loadingScreen.classList.remove('active');
+          }
+        }, 1000);
+      });
+    </script>
 </body>
 </html>
